Bug 67732 - [Baytrail-M] eDP and VGA can't light up simultaneously
Summary: [Baytrail-M] eDP and VGA can't light up simultaneously
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: high critical
Assignee: Jesse Barnes
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-04 05:59 UTC by kobeqin
Modified: 2017-10-06 14:44 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg for eDP and VGA can't light up simultaneously (89.26 KB, text/plain)
2013-08-05 10:00 UTC, kobeqin
no flags Details

Description kobeqin 2013-08-04 05:59:08 UTC
Test Environment, 

Platform: Baytrail-M 
00:00.0 Host bridge [0600]: Intel Corporation ValleyView SSA-CUnit [8086:0f00] (rev 06)
00:02.0 VGA compatible controller [0300]: Intel Corporation ValleyView Gen7 [8086:0f31] (rev 06)

Driver version:
OSD: 			Fedora Release 19.x86_64
Kernel_version: 	kernel-3.11.0rc2_drmintelfixes_61c254_20130731_+-6401.x86_64.rpm
Libdrm:         (master)libdrm-2.4.46-2-gfea5408098c3c3057958e85ea9d7146f0b08749e
Mesa:           (9.2)9b8ad643629fad1724e01c8fbb3289e43d42e1c1
Xserver:                (server-1.13-branch)xorg-server-1.13.4
Xf86_video_intel:               (master)2.21.13-35-g493763301e995d02cb838d14348da46dd26444af
Cairo:          (master)3cd6c5966aca1d202744fe44083800bc2a4a831d
Libva:          (master)d2dbc3f69c69e5933e7b3da429c0fb0cae5b98b0
Libva_intel_driver:             (master)8bf807539c1790d6eee531373131672d38c82b31
OpenCL:         (master)
Kernel:         (drm-intel-fixes) 61c2542b3b8e70fc1b82880c3ef7e2f930875b97

BIOS version:
BBAYCRB_X64_R_SPI_0040_40_SEC_1040

Description:
eDP can light up alone, but hotplug VGA, eDP can't light up anymore.
Comment 1 Chris Wilson 2013-08-04 08:18:19 UTC
And just before we had VGA hotplugging doesn't work...

This requires a drm.debug=6 dmesg.
Comment 2 Daniel Vetter 2013-08-04 16:59:38 UTC
Jesse is the Batrail owner.
Comment 3 kobeqin 2013-08-05 10:00:17 UTC
Created attachment 83653 [details]
dmesg for eDP and VGA can't light up simultaneously

We try to start X, but eDP still can't light up.
Comment 4 kobeqin 2013-08-05 10:35:43 UTC
We test 2 scenario,
First,
1. Hotplug VGA to system
2. Power ON
Result: eDP can't light up

Second,
1. Power ON(eDP can light up at this time)
2. Enter to OS
3. Hotplug VGA to system
Result: eDP and VGA can light up at the same time
Comment 5 Chris Wilson 2013-08-11 11:22:18 UTC
At a high level we are happy, the modeset completed without any errors. So we aren't setting up the display arbitration correctly somewhere...
Comment 6 Jesse Barnes 2013-09-19 19:32:14 UTC
Does this still occur now that Jani's patch for handling the pipe B panel power sequencer has landed?
Comment 7 Jani Nikula 2013-09-20 12:34:17 UTC
(In reply to comment #6)
> Does this still occur now that Jani's patch for handling the pipe B panel
> power sequencer has landed?

We may also need per pipe backlight handling. Which will be a larger PITA than per pipe power sequencing.
Comment 8 shui yangwei 2013-09-23 09:37:36 UTC
We tested it with latest -nightly kernel, but the issue is still exists like what Kobe described.
Comment 9 Jesse Barnes 2013-09-24 20:59:53 UTC
If you do:
intel_reg_write 0x1e1254 0x11551155

as root when this occurs, does the eDP panel light up?
Comment 10 shui yangwei 2013-09-25 02:17:16 UTC
(In reply to comment #9)
> If you do:
> intel_reg_write 0x1e1254 0x11551155
> 
> as root when this occurs, does the eDP panel light up?

eDP panel really lighted up after I executed "intel_reg_write 0x1e1254 0x11551155".
Comment 11 Jesse Barnes 2013-09-25 16:44:37 UTC
And how about this patch?

http://lists.freedesktop.org/archives/intel-gfx/2013-September/033913.html
Comment 12 kobeqin 2013-09-25 16:45:11 UTC
I will take short vacation from Sep.26th to Sep.30th. And have Chinese National Day from Oct.1st to Oct.7th.

No email access during my short vacation and slow email response during Chinese National Day.

If any urgent case, please contact my manager(Yu, Jerry), thanks a lot.
Comment 13 shui yangwei 2013-09-26 02:11:04 UTC
(In reply to comment #11)
> And how about this patch?
> 
> http://lists.freedesktop.org/archives/intel-gfx/2013-September/033913.html

OK, this patch worked, eDP and VGA can light up simultaneously now.
Comment 14 Jesse Barnes 2013-09-26 21:01:49 UTC
commit f8abb0d1bb5240164687df528c5e590cbf072e3e
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Wed Sep 25 14:04:32 2013 -0700

    drm/i915/vlv: hack to init backlight regs if BIOS fails to do so v2
Comment 15 shui yangwei 2013-09-27 01:48:39 UTC
(In reply to comment #14)
> commit f8abb0d1bb5240164687df528c5e590cbf072e3e
> Author: Jesse Barnes <jbarnes@virtuousgeek.org>
> Date:   Wed Sep 25 14:04:32 2013 -0700
> 
>     drm/i915/vlv: hack to init backlight regs if BIOS fails to do so v2

This commit worked, verified here.
Comment 16 Elizabeth 2017-10-06 14:44:22 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.